# SpiderTex

./: .gitignore  Cargo.toml  DXTexWrapper.lib  LICENSE.md  README.md  build.rs  cranky.toml  deny.toml  formats.json
.cargo/: config.toml
SpiderTex/: Cargo.toml
SpiderTex/src/: egui.rs  main.rs  win32.rs
SpiderTex/src/gui/: noninteractive.rs
SpiderTex/src/gui/widgets/: log.rs
SpiderTexGUI/: Cargo.toml  build.rs
SpiderTexGUI/src/: log.rs  main.rs  win32.rs
SpiderTexGUI/src/gui/: batch.rs  export.rs  import.rs  preview.rs  theme.rs  window.rs
directxtex/: Cargo.toml
directxtex-sys/: Cargo.toml  DXTexWrapper.lib  build.rs
directxtex-sys/src/: lib.rs
directxtex/src/: lib.rs
dxgi-format/: Cargo.toml
dxgi-format/src/: lib.rs
format-experiment/: Cargo.toml  formats.json
format-experiment/src/: main.rs
format-experiment/src/formats/: dxgi.rs  misc.rs  mod.rs  texture.rs
initialize-com/: Cargo.toml
initialize-com/src/: lib.rs
spidertex/: app_manifest.xml
spidertex/src/future/: imagers.rs
spidertex/tests/: load_images.rs  outputs.rs
src/: convert.rs  dxtex.rs  error.rs  files.rs  formats.rs  headers.rs  images.rs  inputs.rs  lib.rs  main.rs  registry.rs  rgb.rs  texture_file.rs  ui.rs
src/dxtex/: ffi.rs
src/dxtex-dummy/: ffi.rs  mod.rs
src/formats/: dxgi.rs  misc.rs  mod.rs  texture.rs
src/util/: maybe_ready.rs  mod.rs  panic.rs  walkdir.rs  win32-dummy.rs  win32.rs
src/util/win32/: open_files.rs
tests/: Cargo.toml  clean_testdata.rs  crashing_bug.rs  dx_format.rs  export_testdata.rs  guess_format.rs  outputs.rs
tests/src/: lib.rs
tests/tests/: clean_testdata.rs  dx_format.rs  export_testdata.rs  guess_format.rs  load_images.rs  outputs.rs  update_formats.rs
texturesofspiderman/: Cargo.toml  build.rs  cranky.toml
texturesofspiderman-bin/: Cargo.toml  build.rs
texturesofspiderman-bin/src/: gui.rs  lib.rs  win32.rs
texturesofspiderman-bin/src/gui/: noninteractive.rs
texturesofspiderman-bin/src/gui/widgets/: log.rs
texturesofspiderman-bin/src/win32/: icon.rs
texturesofspiderman-egui/: Cargo.toml
texturesofspiderman-egui/src/: lib.rs  log.rs
texturesofspiderman/src/: convert.rs  error.rs  files.rs  images.rs  inputs.rs  lib.rs  rgb.rs  texture_file.rs
texturesofspiderman/src/dxtex/: deprecated.rs  ffi.rs  mod.rs
texturesofspiderman/src/formats/: misc.rs  mod.rs  texture.rs
texturesofspiderman/src/future/: imagers.rs
texturesofspiderman/src/util/: maybe_ready.rs  mod.rs  walkdir.rs
texturesofspiderman/tests/: clean_testdata.rs  dx_format.rs  export_testdata.rs  guess_format.rs  load_images.rs  outputs.rs
tracing-egui-repaint/: Cargo.toml
tracing-egui-repaint/src/: lib.rs  oncecell.rs
tracing-messagevec/: Cargo.toml
tracing-messagevec/src/: lib.rs
tracing-oncecell/: Cargo.toml
tracing-oncecell/src/: lib.rs
windows-compat/: Cargo.toml
windows-compat/src/: compat.rs  errors.rs  lib.rs  windows.rs
windows-imaging/: Cargo.toml
windows-imaging/src/: guid.rs  lib.rs
