[workspace]
members = [
    "texturesofspiderman",
    "texturesofspiderman-bin",
    # "format-experiment",
    "tracing-egui-repaint",
    "tracing-oncecell",
    "tracing-messagevec",
    "dxgi-format",
    "directxtex",
    "directxtex-sys",
    "windows-imaging",
    "windows-compat",
    "initialize-com",
    "tests",
]
resolver = "2"
