[package]
name = "SpiderTex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.1"
camino = "1.1.1"
directxtex = { path = "../directxtex" }
texturesofspiderman = { path = "../texturesofspiderman" }

[target.'cfg(windows)'.dependencies]
directxtex = { path = "../directxtex", features = ["windows-imaging"] }
windows-imaging = { path = "../windows-imaging" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
