[package]
name = "SpiderTexGUI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
texturesofspiderman = { version = "1.1.0-beta7", path = "../texturesofspiderman" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
