[package]
name = "directxtex-sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/monax3/SpiderTex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxgi-format = { version = "0.1.0", path = "../dxgi-format" }
windows = { version = "0.39.0", features = ["Win32_Graphics_Dxgi_Common"], optional = true }
windows-compat = { path = "../windows-compat" }

[build-dependencies]
vcpkg = { version = "0.2.15", optional = true }

[target.'cfg(windows)'.build-dependencies]
vcpkg = { version = "0.2.15"  }

[features]
# default = ["dxgi-format", "hresult", "vcpkg"]
default = ["windows"]
# dxgi-format = ["windows/Win32_Graphics_Dxgi_Common"]
# hresult = ["windows"]
