[package]
name = "dxgi-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.39.0", features = ["Win32_Graphics_Dxgi_Common"] }
serde = { version = "1", features = ["derive"] }
