[package]
name = "format-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.10.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
windows = { version = "0.39.0", features = [
#    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
] }
