[package]
name = "initialize-com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.39.0", features = [
    # "Win32_Foundation",
    # "Win32_Graphics_Dxgi_Common",
    # "Win32_Graphics_Imaging",
    # "Win32_Graphics_Imaging_D2D",
    "Win32_System_Com",
    # "Win32_UI_Shell_Common",
    # "Win32_UI_Shell",
    # "Win32_UI_WindowsAndMessaging",
    # "Win32_System_Com_StructuredStorage",
    # "Win32_System_SystemServices",
] }
