[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.1"
camino = "1.1.1"
directxtex = { version = "0.1.0", path = "../directxtex" }
hex = "0.4.3"
image = "0.24.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
texturesofspiderman = { version = "1.1.0-beta7", path = "../texturesofspiderman" }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["std", "fmt", "env-filter"] }

[target.'cfg(windows)'.dependencies]
directxtex = { version = "0.1.0", path = "../directxtex", features = ["windows-imaging"] }
windows-imaging = { version = "0.1.0", path = "../windows-imaging" }
