[package]
name = "texturesofspiderman-bin"
version = "1.2.0-rc1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/monax3/SpiderTex"
default-run = "SpiderTex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.1"
camino = "1.1.1"
directxtex = { path = "../directxtex" }
eframe = "0.19.0"
initialize-com = { version = "0.1.0", path = "../initialize-com" }
once_cell = "1.13.1"
texturesofspiderman = { version = "1.1.0-beta7", path = "../texturesofspiderman" }
tracing = { version = "0.1.36", features = ["max_level_trace", "release_max_level_trace"]}
tracing-egui-repaint = { version = "1.0.0-rc1", path = "../tracing-egui-repaint" }
tracing-messagevec = { version = "0.1.0", path = "../tracing-messagevec" }
tracing-oncecell = { version = "1.0.0-beta1", path = "../tracing-oncecell" }
tracing-subscriber = { version = "0.3.15", features = ["registry"] }
dxgi-format = { path = "../dxgi-format" }
backtrace = "0.3.66"
parking_lot = "0.12.1"
image = { version = "0.24.3", default-features = false }
arboard = "2.1.1"

[target.'cfg(windows)'.dependencies]
directxtex = { path = "../directxtex", features = ["windows-imaging"] }
windows-imaging = { path = "../windows-imaging" }
windows = { version = "0.39.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
