[package]
name = "texturesofspiderman-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
tracing = "0.1.36"
tracing-messagevec = { version = "0.1.0", path = "../tracing-messagevec" }
