[package]
name = "tracing-egui-repaint"
authors = ["mona <mona@goingtobeamazing.dk>"]
version = "1.0.0-rc1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/monax3/SpiderTex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.19.0", default-features = false }
tracing = { version = "0.1.36", default-features = false }
tracing-subscriber = { version = "0.3.15", default-features = false }
tracing-oncecell = { path = "../tracing-oncecell", optional = true }

[features]
default = ["tracing-oncecell"]
