[package]
name = "tracing-messagevec"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/monax3/SpiderTex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
append-only-vec = "0.1.2"
tracing = { version = "0.1.36", default-features = false }
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["registry"] }
