[package]
name = "tracing-oncecell"
authors = ["mona <mona@goingtobeamazing.dk>"]
version = "1.0.0-beta1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { version = "1.13.1", features = ["parking_lot"] }
tracing = { version = "0.1.36", default-features = false }
tracing-subscriber = { version = "0.3.15", default-features = false }
